--- a/src/cv_7.tex
+++ b/src/cv_7.tex
@@ -38,14 +38,14 @@
 %	NAME AND CONTACT INFORMATION SECTION
 %----------------------------------------------------------------------------------------
 
-\firstname{Johnn} % Your first name
-\familyname{Smith} % Your last name
+\firstname{Ingvald} % Your first name
+\familyname{Meland} % Your last name
 
 % All information in this block is optional, comment out any lines you don't need
 \title{CV}
-\address{123 Broadway}{City, State 12345}
+\address{Tuevegen 1a}{Kleppe, Rogaland}
 \phone{416 93 345}
-\email{john@smith.com}
+\email{ingvald@sneki.net}
 \photo[80pt][0.2pt]{pictures/picture} % The first bracket is the picture height, the second is the thickness of the frame around the picture (0pt for no frame)
 
 %----------------------------------------------------------------------------------------
@@ -76,35 +76,19 @@
 
 \subsection{Yrkesrettet}
 
-\cventry{2023--Present}{1\textsuperscript{st} Year Analyst}{\textsc{Lehman Brothers}}{Los Angeles}{}{Developed spreadsheets for risk analysis on exotic derivatives on a wide array of commodities (ags, oils, precious and base metals), managed blotter and secondary trades on structured notes, liaised with Middle Office, Sales and Structuring for bookkeeping.
-\newline{}\newline{}
-Detailed achievements:
-\begin{itemize}
-\item Learned how to make amazing coffee
-\item Finally determined the reason for \textsc{PC LOAD LETTER}:
-\begin{itemize}
-\item Paper jam
-\item Software issues:
-\begin{itemize}
-\item Word not sending the correct data to printer
-\item Windows trying to print in letter format
-\end{itemize}
-\item Coffee spilled inside printer
-\end{itemize}
-\item Broke the office record for number of kitten pictures in cubicle
-\end{itemize}}
-
-%------------------------------------------------
-
-\cventry{2011--2012}{Summer Intern}{\textsc{Lehman Brothers}}{Los Angeles}{}{Rated "truly distinctive" for Analytical Skills and Teamwork.}
+\cventry{2023--D.D}{Operations}{Deltidsansatt}{Elkjøp Jærhagen}{Kleppe}{Salg, kunde behandling, lagerarbeid, brukerstøtte, service/reprasjon av datamaskiner og andre elektroniske enheter}
 
 %------------------------------------------------
 
 \subsection{Diverse}
 
-\cventry{2010--2011}{}{}{}{}{Spent some time finding myself. This was a courageous endeavour that didn't have a job title. It was quite important to my overall development though so I'm adding it to my CV. Also it explains the gap in my otherwise stellar CV.}
+\cventry{2022--2023}{Avløyser}{Deltidsansatt}{Landbrukstjenesten Jæren}{Kleppe}{Avløyser i melkefjøs, stell av ku og ungdyr, annenhver helg}
 
-\cventry{2009--2010}{Computer Repair Specialist}{Buy More}{Burbank}{}{Worked in the Nerd Herd and helped to solve computer problems. Allowed me to become expert in all forms of martial arts and weaponry.}
+\cventry{Juni--August 2021}{Driftsoperatør}{Sommerhjelp}{Talgje Rensefisk}{Stavanger}{Forefallende arbeid, røkting av fisk,
+        rydde lager, vaske, høytrykksspyling av kar og haller, dokumentering og loggføring under arbeidsoperasjoner.}
+
+\cventry {August 2020}{Driftsoperatør}{Sommerhjelp}{Finnmark Rensefisk}{Alta}{Forefallende arbeid, røkting av fisk, rydding og vasking av kar og haller,
+        dokumentering og loggføring under arbeidsoperasjoner, håving av fisk, vaksinering, utarbeiding av røkterstandard.}
 
 %----------------------------------------------------------------------------------------
 %	COMPUTER SKILLS SECTION
@@ -112,8 +96,8 @@ Detailed achievements:
 
 \section{Computer skills}
 
-\cvitem{Basic}{\textsc{python}, \textsc{html}, Adobe Premiere Pro, Adobe After Effects}
-\cvitem{Intermediate}{\LaTeX, Microsoft Windows}
+\cvitem{Basic}{\textsc{python}, Adobe Premiere Pro, Adobe After Effects}
+\cvitem{Intermediate}{\LaTeX, Microsoft Windows, Excel}
 \cvitem{Advanced}{\textsc{Linux}, DaVinci Resolve}
 
 %----------------------------------------------------------------------------------------
